--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.0",
+    "@geist-ui/core": "^2.3.8",
+    "@geist-ui/icons": "^1.0.2",
+    "@google/generative-ai": "^0.24.1",
+    "@gsap/react": "^2.1.2",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/supabase-js": "^2.86.0",
+    "dotenv": "^17.2.3",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
     "next": "16.0.5",
+    "openai": "^6.9.1",
+    "paystack": "^2.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "xai-sdk": "^1.0.0-alpha.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
